taskrail_client/src/components/TaskNode/Decorators/WithSubtaskSkin/WithSubtaskSkin.css
.subtask-skin {
    border-style: solid;
    background-color: #ff5f5c;
    border-radius: 20px;
    position: relative;
} 

.subtask-top, .subtask-bottom {
   float: right;
   font-size: 12px;
   overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
   width:80%;
}

.subtask-top {
    border-bottom: solid black 1px;
    /* font-size: 0.75vw; */
}

.subtask-bottom {
    border-top: solid black 1px;
    /* font-size: 1vw; */
    position: relative;
}

div.subtask-skin .checkbox-container {
    position: absolute;
    float: left;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    border-right: 2px solid black;
    width: 20%;
}

input[type=checkbox].float-checkbox {
    margin: 0px 0px 0px 0px;
}

.subtask-bottom input[type=date] {
    background-color: transparent;
    /* color:transparent; */
    border: none;
    border-radius: 25px;
    margin-right: 5%;
    /* text-align: center; */
    margin-left: 5%;
}

/* .subtask-bottom input[type=date]:focus{
    color:transparent;
} */

.subtask-bottom p {
    margin-left: 5%;
}

